# WhisperLiveKit

./: .gitignore  AGENTS.md  DEV_NOTES.md  Dockerfile  Dockerfile.cpu  docker-run.ps1  pyproject.toml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
whisperlivekit/: basic_server.py
whisperlivekit/web/: HISTORY_UI_DESIGN.md  PHASE2_UI_DESIGN.md  audio_encoder_worker.js  live_transcription.css  live_transcription.html  live_transcription.js  mp3_encoder_worker.js  web_interface.py
